--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -2,33 +2,33 @@
     <div class="all">
         <a class="lefter" [routerLink] = "['/']" fragment="about">
           <div>
-            <div class="text">Sobre mi</div>
+            <div class="text">{{"menu.sobre-mi" | translate}}</div>
           </div>
         </a>
         <a class="left" [routerLink] = "['/']" fragment="services">
           <div>
-            <div class="text">Servicios</div>
+            <div class="text">{{"menu.servicios" | translate}}</div>
           </div>
         </a>
         <a class="left2" [routerLink] = "['/']" fragment="projects">
           <div>
-            <div class="text">Trabajos</div>
+            <div class="text">{{"menu.trabajos" | translate}}</div>
           </div>
         </a>
         <a class="center" [routerLink] = "['/']" fragment="home">
           <div class="center">
             <div class="explainer"><span class="txt-menu"><fa-icon class="faMenu" [icon]="faCoffee"></fa-icon>Menu</span></div>
-            <div class="text">Inicio</div>
+            <div class="text">{{"menu.inicio" | translate}}</div>
           </div>
         </a>
         <a class="right" [routerLink] = "['/']" fragment="timeline">
           <div >
-            <div class="text">Trayectoria</div>
+            <div class="text">{{"menu.trayectoria" | translate}}</div>
           </div>
         </a>
         <a class="righter" [routerLink] = "['/']" fragment="contact">
           <div>
-            <div class="text">Contacto</div>
+            <div class="text">{{"menu.contacto" | translate}}</div>
           </div>
         </a>
         </div>
