--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,8 +1,8 @@
 
 <div class="ctn-inicio-projects">
 
-  <h3>Mis proyectos</h3>
-  <p class="txt-descripcion">Algunos proyectos personales y empresariales en los que he participado</p>
+  <h3>{{"proyectos.titulo" | translate}}</h3>
+  <p class="txt-descripcion">{{"proyectos.desc" | translate}}</p>
   <div class="ctn-swiper">
     <app-swiper-desktop></app-swiper-desktop>
     <app-swiper-mobile></app-swiper-mobile>
