--- a/src/app/pages/projects/swiper-desktop/swiper-desktop.component.html
+++ b/src/app/pages/projects/swiper-desktop/swiper-desktop.component.html
@@ -4,11 +4,11 @@
         <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Aristos Soluciones">
       </div>
       <div class="swiper__content">
-        <span class="swiper__code">Marzo 2019</span>
+        <span class="swiper__code">{{"proyectos.proy-1.fecha" | translate}}</span>
         <div class="swiper__title">Aristos Soluciones S.A.S</div>
-        <div class="swiper__text">Empresa colombiana con diferentes líneas de negocio como gerencia de proyectos y gestíon de recursos humanos.</div>
+        <div class="swiper__text">{{"proyectos.proy-1.desc" | translate}}</div>
         <div class="ctn-stack">
-          <label for="">Tecnologías</label>
+          <label for="">{{"proyectos.tecnologias" | translate}}</label>
           <p>HTML</p>
           <p>Boostrap</p>
           <p>Node.js</p>
@@ -25,11 +25,11 @@
         <img src="https://images.unsplash.com/photo-1509785307050-d4066910ec1e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1028&q=80" alt="SERCOR">
       </div>
       <div class="swiper__content">
-        <span class="swiper__code">Diciembre 2019</span>
+        <span class="swiper__code">{{"proyectos.proy-2.fecha" | translate}}</span>
         <div class="swiper__title">SERCOR</div>
-        <div class="swiper__text">Emprendimiento colombiano para la recolección agrícola.</div>
+        <div class="swiper__text">{{"proyectos.proy-2.desc" | translate}}</div>
         <div class="ctn-stack">
-          <label for="">Tecnologías</label>
+          <label for="">{{"proyectos.tecnologias" | translate}}</label>
           <p>HTML</p>
           <p>CSS</p>
           <p>Boostrap</p>
@@ -47,11 +47,11 @@
         <img src="https://images.unsplash.com/photo-1528629297340-d1d466945dc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1522&q=80" alt="Biclapp">
       </div>
       <div class="swiper__content">
-        <span class="swiper__code">Julio 2018</span>
+        <span class="swiper__code">{{"proyectos.proy-3.fecha" | translate}}</span>
         <div class="swiper__title">Biclapp</div>
-        <div class="swiper__text">Aplicacion web para el control de ingreso y salidas de bicicletas para la universidad Autonoma del Cauca.</div>
+        <div class="swiper__text">{{"proyectos.proy-3.desc" | translate}}</div>
         <div class="ctn-stack">
-          <label for="">Tecnologías</label>
+          <label for="">{{"proyectos.tecnologias" | translate}}</label>
           <p>Angular</p>
           <p>Boostrap</p>
           <p>Firebase</p>
@@ -70,11 +70,11 @@
         <img src="https://images.unsplash.com/photo-1558640476-437a2b9438a2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1642&q=80" alt="Clean World">
       </div>
       <div class="swiper__content">
-        <span class="swiper__code">Octubre 2020</span>
+        <span class="swiper__code">{{"proyectos.proy-4.fecha" | translate}}</span>
         <div class="swiper__title">Clean World</div>
-        <div class="swiper__text">Estrategia de educacion didactica para enseñar a separar los residuos aprovechables en el hogar.</div>
+        <div class="swiper__text">{{"proyectos.proy-4.desc" | translate}}</div>
         <div class="ctn-stack">
-          <label for="">Tecnologías</label>
+          <label for="">{{"proyectos.tecnologias" | translate}}</label>
           <p>Angular</p>
           <p>Angular material</p>
           <p>Firebase</p>
