--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div class="ctn-logo">
-    <h3 class="sub-title">Mis habilidades</h3>
+    <h3 class="sub-title">{{"servicios.habilidades.titulo" | translate}}</h3>
     <div class="ctn-skills">
         <div class="ctn-img-logo">
             <img class="logo" src="../../../assets/img/icon-firebase.png" alt="Firebase" >
@@ -34,7 +34,7 @@
             <p>Typescript</p>
         </div>    
     </div>
-    <h3 class="sub-title title-learning">Aprendiendo...</h3>
+    <h3 class="sub-title title-learning">{{"servicios.habilidades.aprendiendo" | translate}}</h3>
     <div class="ctn-learning">
         <div class="ctn-img-logo">
             <img class="logo" src="../../../assets/img/icono-python.png" alt="Python" >
