--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -5,12 +5,12 @@
                 <img class="ctn-page-about__img" src="../../../assets/img/img-about-me.jpg" alt="" srcset="">
             </div>
             <div class="col ctn-page-about__text">
-                <h3 class="ctn-page-about__title">Sobre mí</h3>
+                <h3 class="ctn-page-about__title">{{"sobre-mi.titulo" | translate}}</h3>
                 <p class="line-bottom"></p>
                 <p class="ctn-page-about__txt-description">
-                <ngx-emoji size:16 emoji=":man-raising-hand::skin-tone-3:" ></ngx-emoji>Soy Ingeniero de software con más de 3 años de experiencia en el desarrollo de aplicaciones web en el sector bancario, trasporte público, hospitalario y gubernamentales, especializado en tecnologías web frontend con Angular y programación reactiva con Rxjs aplicando mejores prácticas de desarrollo. <br> <br>
-                <ngx-emoji size:16 emoji=":rocket::skin-tone-3:" ></ngx-emoji>A lo largo de mi trayectoria profesional he adquirido conocimientos en diversas tecnologías como Typescript, Javascript, Angular, React, Angular Material, Boostrap y Rxjs. <br> <br>
-                <ngx-emoji size:16 emoji=":books::skin-tone-3:" ></ngx-emoji>Cuento con un título profesional de ingeniero de sistemas informáticos de la universidad <strong> Autónoma del Cauca </strong> además de certificaciones sobre desarrollo web y responsive design en <strong> Platzi </strong> y <strong> Udemy </strong>. <br>
+                <ngx-emoji size:16 emoji=":man-raising-hand::skin-tone-3:" ></ngx-emoji>{{"sobre-mi.primero-parrafo" | translate}} <br> <br>
+                <ngx-emoji size:16 emoji=":rocket::skin-tone-3:" ></ngx-emoji>{{"sobre-mi.segundo-parrafo" | translate}} <br> <br>
+                <ngx-emoji size:16 emoji=":books::skin-tone-3:" ></ngx-emoji>{{"sobre-mi.tercer-parrafo" | translate}} <br>
                 <!-- <ngx-emoji size:16 emoji=":video_game::skin-tone-3:" ></ngx-emoji> Me siento muy afortunado porque amo mi profesión y siempre doy lo mejor de mi para seguir aprendiendo y mejorando. Cuando no estoy sentado en frente de la computadora estoy jugando futbol, leyendo o quizás siendo Rambo en warzone.  -->
                 </p>
             </div>
