--- a/src/app/pages/container/container.component.html
+++ b/src/app/pages/container/container.component.html
@@ -12,22 +12,22 @@
     
                 <ul>
                     <li> 
-                        <a (click)="toggleMenu()"[routerLink] = "['/']" fragment="home">Inicio</a> 
+                        <a (click)="toggleMenu()"[routerLink] = "['/']" fragment="home">{{"menu.inicio" | translate}}</a> 
                     </li>
                     <li>
-                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="about">Sobre mi</a> 
+                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="about">{{"menu.sobre-mi" | translate}}</a> 
                     </li>
                     <li>
-                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="services">Servicios</a>
+                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="services">{{"menu.servicios" | translate}}</a>
                     </li>
                     <li>
-                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="timeline">Trayectoria</a> 
+                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="timeline">{{"menu.trayectoria" | translate}}</a> 
                     </li>
                     <li> 
-                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="projects">Trabajos</a> 
+                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="projects">{{"menu.trabajos" | translate}}</a> 
                     </li>
                     <li> 
-                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="contact">Contacto</a> 
+                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="contact">{{"menu.contacto" | translate}}</a> 
                     </li>
                 </ul>
                 <button class="ctn-boton-close" (click)="toggleMenu()">
