--- a/src/app/pages/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/inicio.component.scss
@@ -5,6 +5,17 @@
   justify-content: center;
   height: 100vh;
 }
+.ctn-idioma {
+  display: flex;
+  justify-content: end;
+  margin-right: 35px;
+  p {
+    margin: 0;
+    line-height: 35px;
+    margin-right: 10px;
+    font-size: 20px;
+  }
+}
 .btn-cv {
   text-decoration: none;
   color: black;
@@ -243,7 +254,7 @@ ngx-emoji {
 }
 @media (min-width: 1900px){
   .content {
-    top: 13.6%;
+    top: 14.2%;
   }
   .txt-description {
     margin-top: 80px;
@@ -276,7 +287,7 @@ ngx-emoji {
 }
 @media (min-width: 1395px) and (max-width: 1900px) {
   .content{
-    top: 12.6%;
+    top: 13.3%;
   }
   .ctn-inicio {
     height: 90vh;
@@ -294,7 +305,7 @@ ngx-emoji {
     justify-content: space-around;
   }
   .content{
-    top: 10.9%;
+    top: 12.9%;
     left: 28%;
   }
   .ctn-info-page__texto {
@@ -318,7 +329,7 @@ ngx-emoji {
     max-width: 80%;
   }
   .ctn-info-page {
-    margin-top: 160px;
+    margin-top: 35px;
   }
 }
 @media (max-width: 770px) {
@@ -348,7 +359,7 @@ ngx-emoji {
 }
 @media (max-width: 600px) {
   .content {
-    top: 4%;
+    top: 4.3%;
     left: 50%;
     height: 133px;
     font-size: 22px;
