--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -1,36 +1,36 @@
 
 <div class="ctn-inicio">
-    <h3>Mi trayectoria</h3>
-    <p class="txt-description">Conoce un poco más a detalle mi trayectoria en el mundo de la tecnología y el desarrollo de software</p>
+    <h3>{{"trayectoria.titulo" | translate}}</h3>
+    <p class="txt-description">{{"trayectoria.desc" | translate}}</p>
     <section class="horizontal-timeline-container">
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-one">2018</div>
             <div class="timeline-content">
-            <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p>
+            <p>{{"trayectoria.2018" | translate}}</p>
             </div>
         </div>
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-five">2019</div>
             <div class="timeline-content">
-            <p>Líder en el semillero de desarrollo de software de la universidad.</p>
+            <p>{{"trayectoria.2019" | translate}}</p>
             </div>
         </div>
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-two">2019</div>
             <div class="timeline-content">
-            <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
+            <p>{{"trayectoria.2019-2" | translate}}</p>
             </div>
         </div>
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-three">2020</div>
             <div class="timeline-content">
-            <p>Graduación como Ingeniero de sistemas informáticos.</p>
+            <p>{{"trayectoria.2020" | translate}}</p>
             </div>
         </div>
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-four">2021</div>
             <div class="timeline-content">
-            <p>Frontend Developer angular en Asesoftware en múltiples proyectos nacionales e internacionales.</p>
+            <p>{{"trayectoria.2021" | translate}}</p>
             </div>
         </div>
     </section>
@@ -40,20 +40,20 @@
         <ul class="timeline">
             <li class="timeline-event" data-date="2021">
             <h3 class="timeline-title-event">Frontend Asesoftware S.A.S</h3>
-            <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
+            <p>{{"trayectoria.2021" | translate}}</p>
             </li>
             <li class="timeline-event" data-date="2020">
             <h3 class="timeline-title-event">Graduacion universidad</h3>
-            <p>Graduacion como Ingenerio de sistemas informaticos.</p>   
+            <p>{{"trayectoria.2020" | translate}}</p>   
             </li>
             <li class="timeline-event" data-date="2019">
             <h3 class="timeline-title-event">Frontend Sitis S.A.S</h3>
-            <p>Lider en el semillero de desarrollo de software de la universidad.</p>
-            <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
+            <p>{{"trayectoria.2019" | translate}}</p>
+            <p>{{"trayectoria.2019-2" | translate}}</p>
             </li>
             <li class="timeline-event" data-date="2018">
             <h3 class="timeline-title-event">Hult Prize</h3>
-            <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p> 
+            <p>{{"trayectoria.2018" | translate}}</p> 
             </li>
         </ul>
     </div>
